<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="edu.uc.bearcatstudytables.ui.viewmodel.ChatViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.data.name}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_description"
                        android:imeOptions="actionNext|flagNoExtractUi"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.data.description}" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/students_auto_complete_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
                            android:id="@+id/students_auto_complete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/students" />

                    </android.support.design.widget.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/progress_loading"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/students_auto_complete_layout"
                        android:layout_alignTop="@id/students_auto_complete_layout"
                        android:layout_centerVertical="true"
                        android:foregroundGravity="center_vertical" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        bind:isVisible="@{viewModel.isLoading}" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onAddCourseButtonClick"
                        android:text="@string/action_add_course"
                        bind:isVisible="@{!viewModel.isLoading}" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
